@@ -2,7 +2,6 @@ package org.example;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-import java.io.IOException;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -10,98 +9,169 @@ import java.net.http.HttpResponse;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
-import java.util.List;
-import java.util.Locale;
-import java.util.Set;
+import java.util.*;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
+import java.util.concurrent.locks.LockSupport;
+import java.util.stream.Stream;
 
 public class LoadGeneratorApplication {
 
     public record CountRequest(String mode, List<String> filePaths) {}
 
-    private static final Set<String> TEXT_EXTENSIONS =
-            Set.of("txt", "md", "java", "xml", "yml", "yaml", "properties", "csv", "json", "html");
+    public static void main(String[] args) throws Exception {
+        final int targetRps = Integer.parseInt(System.getProperty("rps", "100"));
+        final String durationProp = System.getProperty("duration", "30s");
+        final String url = System.getProperty("url", "http://localhost:8080/count");
+        final String sourceDir = System.getProperty("source", "./advanced-topics/src/main/java");
+        final String extArg = System.getProperty("ext", "txt,md,java");
+        final Set<String> allowedExts = parseExts(extArg);
 
-    public static void main(String[] args) throws IOException, InterruptedException {
-        int rps = Integer.parseInt(System.getProperty("rps", "100"));
-        Duration duration = Duration.parse("PT" + System.getProperty("duration", "30s"));
-        String url = System.getProperty("url", "http://localhost:8080/count");
-        String sourceDir = System.getProperty("source", ".");
-        int workerThreads = Integer.parseInt(System.getProperty("workers", "16"));
+        final int workerThreads = Integer.parseInt(System.getProperty("workers", "16"));
+        final String mode = System.getProperty("mode", "pool");
 
-        System.out.printf("Starting load test with config:%n  RPS=%d%n  Duration=%s%n  URL=%s%n  Source=%s%n%n",
-                rps, duration, url, sourceDir);
+        final int nodeCount = Integer.parseInt(System.getProperty("node.count", "1"));
+        final int nodeIndex = Integer.parseInt(System.getProperty("node.index", "0"));
+        if (nodeIndex < 0 || nodeIndex >= nodeCount) {
+            throw new IllegalArgumentException("node.index must be in [0, node.count).");
+        }
+        final int myRps = splitRps(targetRps, nodeCount, nodeIndex);
+        final Duration duration = parseDurationFlexible(durationProp);
 
-        final StatisticsAggregator stats = new StatisticsAggregator();
-        final ObjectMapper objectMapper = new ObjectMapper();
-        final HttpClient client = HttpClient.newBuilder()
-                .executor(Executors.newCachedThreadPool())
-                .build();
+        System.out.printf("""
+                Starting load test with config:
+                  Total RPS=%d | node.count=%d | node.index=%d -> this node RPS=%d
+                  Duration=%s
+                  URL=%s
+                  Source=%s
+                  Extensions=%s
+                  Workers=%d
+                  Mode=%s
 
-        List<String> sampleFilePaths;
-        try (var stream = Files.walk(Path.of(sourceDir), 10)) {
+                """, targetRps, nodeCount, nodeIndex, myRps, duration, url, sourceDir, allowedExts, workerThreads, mode);
+
+        final List<String> sampleFilePaths;
+        try (Stream<Path> stream = Files.walk(Path.of(sourceDir), 8)) {
             sampleFilePaths = stream
                     .filter(Files::isRegularFile)
-                    .filter(p -> TEXT_EXTENSIONS.contains(ext(p)))
-                    .map(Path::toString)
-                    .limit(5) // Send 5 files per request
-                    .collect(Collectors.toList());
+                    .filter(p -> hasAllowedExt(p, allowedExts))
+                    .limit(20)
+                    .map(p -> p.toAbsolutePath().toString())
+                    .toList();
         }
         if (sampleFilePaths.isEmpty()) {
-            System.err.println("No text files found in source directory. Cannot create request payload.");
+            System.err.println("No suitable text files found. Try -Dsource=<dir> -Dext=txt,md,java");
             return;
         }
-        byte[] payload = objectMapper.writeValueAsBytes(new CountRequest("pool", sampleFilePaths));
+        System.out.println("Sample payload files:");
+        sampleFilePaths.stream().limit(5).forEach(s -> System.out.println("  - " + s));
 
-        ThreadPoolExecutor workerPool = (ThreadPoolExecutor) Executors.newFixedThreadPool(workerThreads);
-        ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
+        final ObjectMapper mapper = new ObjectMapper();
+        final byte[] payload = mapper.writeValueAsBytes(new CountRequest(mode, sampleFilePaths));
 
-        System.out.println("Starting load generation...");
-        long intervalNanos = 1_000_000_000 / rps;
+        final HttpClient client = HttpClient.newBuilder()
+                .connectTimeout(Duration.ofSeconds(5))
+                .version(HttpClient.Version.HTTP_1_1)
+                .build();
 
-        scheduler.scheduleAtFixedRate(() -> {
-            if (workerPool.getQueue().size() < workerThreads * 2) {
-                workerPool.submit(() -> sendRequest(client, url, payload, stats));
+        final ExecutorService sendPool = Executors.newFixedThreadPool(workerThreads);
+        final StatisticsAggregator stats = new StatisticsAggregator();
+
+        final long intervalNanos = (long) (1_000_000_000.0 / myRps);
+        final long totalRequests = Math.max(0L, Math.round((duration.toNanos() * 1.0) / intervalNanos));
+        System.out.printf("This node will send %,d requests (interval ~ %,d ns).\n", totalRequests, intervalNanos);
+
+        final CountDownLatch done = new CountDownLatch((int) Math.min(Integer.MAX_VALUE, totalRequests));
+        final long start = System.nanoTime();
+
+        Thread pacer = new Thread(() -> {
+            for (long i = 0; i < totalRequests; i++) {
+                long scheduledTime = start + i * intervalNanos;
+                long waitNanos = scheduledTime - System.nanoTime();
+                if (waitNanos > 0) {
+                    LockSupport.parkNanos(waitNanos);
+                }
+                sendPool.execute(() -> sendRequest(client, url, payload, stats, done));
             }
-        }, 0, intervalNanos, TimeUnit.NANOSECONDS);
+        }, "pacer");
+        pacer.setDaemon(true);
+        pacer.start();
 
+        pacer.join();
 
-        Thread.sleep(duration.toMillis());
+        boolean finished = done.await(Math.max(10, (int) duration.plusSeconds(30).toSeconds()), TimeUnit.SECONDS);
+        sendPool.shutdownNow();
 
-        System.out.println("Test duration finished. Shutting down...");
-        scheduler.shutdownNow();
-        workerPool.shutdown();
-        workerPool.awaitTermination(10, TimeUnit.SECONDS);
+        if (!finished) {
+            System.out.println("Not all responses arrived before timeout; remaining: " + done.getCount());
+        }
 
         stats.printReport();
     }
 
-    private static void sendRequest(HttpClient client, String url, byte[] payload, StatisticsAggregator stats) {
-        long startTime = System.nanoTime();
+    private static boolean hasAllowedExt(Path p, Set<String> exts) {
+        String name = p.getFileName().toString().toLowerCase(Locale.ROOT);
+        int dot = name.lastIndexOf('.');
+        return dot >= 0 && exts.contains(name.substring(dot + 1));
+    }
+
+    private static Set<String> parseExts(String s) {
+        Set<String> set = new LinkedHashSet<>();
+        for (String part : s.split(",")) {
+            part = part.trim().toLowerCase(Locale.ROOT);
+            if (!part.isEmpty()) set.add(part);
+        }
+        return set.isEmpty() ? Set.of("txt", "md", "java") : set;
+    }
+
+    private static void sendRequest(HttpClient client, String url, byte[] payload, StatisticsAggregator stats, CountDownLatch done) {
+        final long startNs = System.nanoTime();
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(url))
+                .timeout(Duration.ofSeconds(10))
                 .header("Content-Type", "application/json")
                 .POST(HttpRequest.BodyPublishers.ofByteArray(payload))
                 .build();
 
         client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                .whenComplete((response, error) -> {
-                    long latencyMillis = (System.nanoTime() - startTime) / 1_000_000;
-                    if (error == null && response.statusCode() == 200) {
-                        stats.recordSuccess(latencyMillis);
-                    } else {
-                        stats.recordFailure();
+                .whenComplete((resp, err) -> {
+                    long latencyMs = TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - startNs);
+                    try {
+                        if (err == null && resp != null && resp.statusCode() == 200) {
+                            stats.recordSuccess(latencyMs);
+                        } else {
+                            stats.recordFailure();
+                        }
+                    } finally {
+                        done.countDown();
                     }
                 });
     }
 
-    private static String ext(Path p) {
-        String n = String.valueOf(p.getFileName());
-        int i = n.lastIndexOf('.');
-        return i < 0 ? "" : n.substring(i + 1).toLowerCase(Locale.ROOT);
+    private static int splitRps(int totalRps, int nodes, int idx) {
+        int base = totalRps / nodes;
+        int extra = totalRps % nodes;
+        return base + (idx < extra ? 1 : 0);
+    }
+
+    private static Duration parseDurationFlexible(String raw) {
+        String v = Objects.requireNonNullElse(raw, "").trim();
+        if (v.isEmpty()) return Duration.ofSeconds(30);
+        try {
+            if (v.startsWith("PT") || v.startsWith("pt")) return Duration.parse(v.toUpperCase(Locale.ROOT));
+            char last = Character.toUpperCase(v.charAt(v.length() - 1));
+            String num = (Character.isDigit(last) ? v : v.substring(0, v.length() - 1)).trim();
+            long n = Long.parseLong(num);
+            return switch (last) {
+                case 'S' -> Duration.ofSeconds(n);
+                case 'M' -> Duration.ofMinutes(n);
+                case 'H' -> Duration.ofHours(n);
+                default -> Duration.ofSeconds(Long.parseLong(v));
+            };
+        } catch (Exception e) {
+            throw new IllegalArgumentException("Bad duration '" + raw + "'. Try 30s, 2m, 1h, or ISO-8601 PT30S.", e);
+        }
     }
 }
